[gd_scene load_steps=30 format=3 uid="uid://c1j44odlgo42f"]

[ext_resource type="Texture2D" uid="uid://b7maq8ef755mi" path="res://backgrounds/grass_battle_background.png" id="1_3b60w"]
[ext_resource type="Script" path="res://Battle.gd" id="1_7dua8"]
[ext_resource type="Resource" uid="uid://4o61bulmtd63" path="res://components/enemy_1.tres" id="2_2lrwe"]
[ext_resource type="Resource" uid="uid://c7u4es6btphxh" path="res://components/player_1.tres" id="3_unjet"]
[ext_resource type="Texture2D" uid="uid://2h7alrlij1wr" path="res://assets/Battlemage Fantasy Character/Battlemage Complete (Sprite Sheet)/Idle/Battlemage Idle.png" id="5_trr8h"]
[ext_resource type="Texture2D" uid="uid://bk2yy0755b7m0" path="res://assets/Battlemage Fantasy Character/Battlemage Complete (Sprite Sheet)/Attack 1/Battlemage Attack 1.png" id="6_3tskh"]
[ext_resource type="Texture2D" uid="uid://b6s2xu4u77jlo" path="res://assets/Battlemage Fantasy Character/Battlemage Complete (Sprite Sheet)/Fast Magic/Battlemage Fast magic.png" id="7_py00e"]
[ext_resource type="PackedScene" uid="uid://dgch1la8udhgi" path="res://TextBoxes/InfoTexbox.tscn" id="8_v0t2j"]
[ext_resource type="PackedScene" uid="uid://w55v1oqxcxtd" path="res://TextBoxes/turn_counter.tscn" id="9_6qasy"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_la22x"]
bg_color = Color(0.929412, 0.0235294, 0, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0, 0, 0, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l5kos"]
bg_color = Color(0, 0.729412, 0.160784, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6vw86"]
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.02, 0.02, 0.02, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ay4ym"]
bg_color = Color(0.0941176, 0.380392, 0.945098, 1)
border_width_left = 1
border_width_top = 1
border_width_bottom = 1
border_color = Color(0.0196078, 0.0196078, 0.0196078, 1)

[sub_resource type="Animation" id="Animation_oh8el"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_trr8h")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_yujte"]
resource_name = "attack"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_3tskh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_nvekw"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_trr8h")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_qe3wk"]
resource_name = "magic_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("7_py00e")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3chu6"]
_data = {
"RESET": SubResource("Animation_oh8el"),
"attack": SubResource("Animation_yujte"),
"idle": SubResource("Animation_nvekw"),
"magic_attack": SubResource("Animation_qe3wk")
}

[sub_resource type="Animation" id="Animation_goik6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_h6khf"]
resource_name = "enemy_attack_damage"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_su34h"]
resource_name = "enemy_earth_damage"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.588235, 0.294118, 0, 1), Color(1, 1, 1, 1), Color(0.588235, 0.294118, 0, 1), Color(1, 1, 1, 1), Color(0.588235, 0.294118, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_eqtsx"]
resource_name = "enemy_fire_damage"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_wuh17"]
resource_name = "enemy_lightning_damage"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1), Color(1, 1, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_vpn16"]
resource_name = "enemy_water_damage"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Enemy:self_modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 1), Color(0, 0, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3ck1d"]
_data = {
"RESET": SubResource("Animation_goik6"),
"enemy_attack_damage": SubResource("Animation_h6khf"),
"enemy_earth_damage": SubResource("Animation_su34h"),
"enemy_fire_damage": SubResource("Animation_eqtsx"),
"enemy_lightning_damage": SubResource("Animation_wuh17"),
"enemy_water_damage": SubResource("Animation_vpn16")
}

[sub_resource type="Animation" id="Animation_5yonk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Character:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_di6b4"]
resource_name = "player_damaged"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Character:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_gwvdt"]
resource_name = "player_heal"
length = 1.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Player_Character:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1), Color(0, 1, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rwyqv"]
_data = {
"RESET": SubResource("Animation_5yonk"),
"player_damaged": SubResource("Animation_di6b4"),
"player_heal": SubResource("Animation_gwvdt")
}

[node name="Battle" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7dua8")
enemy = ExtResource("2_2lrwe")
character = ExtResource("3_unjet")

[node name="Battle_Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1149.0
offset_bottom = 646.0
texture = ExtResource("1_3b60w")

[node name="Player_Character" type="Sprite2D" parent="."]
position = Vector2(832.125, 276)
scale = Vector2(4.50447, 4.16667)
texture = ExtResource("5_trr8h")
flip_h = true
vframes = 8

[node name="Player1 healthbar" type="ProgressBar" parent="Player_Character"]
anchors_preset = -1
anchor_top = 1.265
anchor_bottom = 1.265
offset_left = -26.0
offset_top = -5.72001
offset_right = 41.0
offset_bottom = -3.72001
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_la22x")
theme_override_styles/fill = SubResource("StyleBoxFlat_l5kos")
max_value = 200.0
step = 1.0
value = 50.0
show_percentage = false

[node name="Health Numbers" type="Label" parent="Player_Character/Player1 healthbar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -1.18
anchor_right = 0.5
anchor_bottom = -1.18
offset_left = 44.4207
offset_top = -25.52
offset_right = 87.4207
offset_bottom = 0.480003
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
pivot_offset = Vector2(-64, 23)
text = "HP: 125 / 150"
vertical_alignment = 1

[node name="Player1 magicbar" type="ProgressBar" parent="Player_Character"]
offset_left = -26.0
offset_top = 74.0
offset_right = 42.0
offset_bottom = 78.0
theme_override_styles/background = SubResource("StyleBoxFlat_6vw86")
theme_override_styles/fill = SubResource("StyleBoxFlat_ay4ym")
value = 30.0
show_percentage = false

[node name="Magic Numbers" type="Label" parent="Player_Character/Player1 magicbar"]
layout_mode = 0
offset_left = 23.0862
offset_top = -12.8
offset_right = 66.0862
offset_bottom = 13.2
scale = Vector2(0.5, 0.5)
text = "MP: 25 / 45"
vertical_alignment = 1

[node name="Player_AnimationPlayer" type="AnimationPlayer" parent="Player_Character"]
autoplay = "idle"
libraries = {
"": SubResource("AnimationLibrary_3chu6")
}

[node name="ActionSelection" type="Panel" parent="."]
layout_mode = 0
offset_left = -1.0
offset_top = 471.0
offset_right = 240.0
offset_bottom = 614.0

[node name="Actions" type="VBoxContainer" parent="ActionSelection"]
layout_mode = 0
offset_right = 239.0
offset_bottom = 103.0

[node name="Attack" type="Button" parent="ActionSelection/Actions"]
layout_mode = 2
text = "Attack"

[node name="Magic" type="Button" parent="ActionSelection/Actions"]
layout_mode = 2
text = "Magic"

[node name="Scan" type="Button" parent="ActionSelection/Actions"]
layout_mode = 2
text = "Scan"

[node name="Flee" type="Button" parent="ActionSelection/Actions"]
layout_mode = 2
text = "Flee"

[node name="MagicSelection" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.017
anchor_bottom = 0.062
offset_left = 269.0
offset_top = 400.0
offset_right = 412.416
offset_bottom = 573.824

[node name="Magic" type="VBoxContainer" parent="MagicSelection"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 159.0
offset_bottom = 207.0

[node name="Fire" type="Button" parent="MagicSelection/Magic"]
layout_mode = 2
text = "Fire"

[node name="Water" type="Button" parent="MagicSelection/Magic"]
layout_mode = 2
text = "Water"

[node name="Lightning" type="Button" parent="MagicSelection/Magic"]
layout_mode = 2
text = "Lightning"

[node name="Earth" type="Button" parent="MagicSelection/Magic"]
layout_mode = 2
text = "Earth"

[node name="Healing" type="Button" parent="MagicSelection/Magic"]
layout_mode = 2
text = "Healing"

[node name="Back" type="Button" parent="MagicSelection/Magic"]
layout_mode = 2
text = "Back"

[node name="Enemy" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 330.0
offset_top = 260.0
offset_right = 459.0
offset_bottom = 371.0

[node name="Enemy_healthbar" type="ProgressBar" parent="Enemy"]
layout_mode = 0
offset_left = -203.0
offset_top = -155.0
offset_right = -69.0
offset_bottom = -149.0
size_flags_vertical = 1
theme_override_styles/background = SubResource("StyleBoxFlat_la22x")
theme_override_styles/fill = SubResource("StyleBoxFlat_l5kos")
max_value = 200.0
step = 1.0
value = 50.0
show_percentage = false

[node name="Health Numbers" type="Label" parent="Enemy/Enemy_healthbar"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = -1.18
anchor_right = 0.5
anchor_bottom = -1.18
offset_left = -68.0
offset_top = -58.92
offset_right = 66.0
offset_bottom = 4.08
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(-64, 23)
text = "25/50"

[node name="EnemyDamage" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3ck1d")
}

[node name="TextboxTimer" type="Timer" parent="."]

[node name="PlayerDamage" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_rwyqv")
}

[node name="InfoTextbox" parent="." instance=ExtResource("8_v0t2j")]

[node name="TurnCounter" parent="." instance=ExtResource("9_6qasy")]

[connection signal="pressed" from="ActionSelection/Actions/Attack" to="." method="_on_attack_pressed"]
[connection signal="pressed" from="ActionSelection/Actions/Magic" to="." method="_on_magic_pressed"]
[connection signal="pressed" from="ActionSelection/Actions/Scan" to="." method="_on_scan_pressed"]
[connection signal="pressed" from="ActionSelection/Actions/Flee" to="." method="_on_flee_pressed"]
[connection signal="pressed" from="MagicSelection/Magic/Fire" to="." method="_on_fire_pressed"]
[connection signal="pressed" from="MagicSelection/Magic/Water" to="." method="_on_water_pressed"]
[connection signal="pressed" from="MagicSelection/Magic/Lightning" to="." method="_on_lightning_pressed"]
[connection signal="pressed" from="MagicSelection/Magic/Earth" to="." method="_on_earth_pressed"]
[connection signal="pressed" from="MagicSelection/Magic/Healing" to="." method="_on_healing_pressed"]
[connection signal="pressed" from="MagicSelection/Magic/Back" to="." method="_on_back_pressed"]
[connection signal="timeout" from="TextboxTimer" to="." method="_on_textbox_timer_timeout"]
